# django-mailbox

./: .bumpversion.cfg  .flake8  .gitignore  .hgignore  .hgtags  .travis.yml  CHANGELOG.md  CHANGELOG.rst  MANIFEST  MANIFEST.in  Makefile  manage.py  pyproject.toml  readme.rst  rtd_requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini  version_updater.json
.github/workflows/: ci.yaml  main.yml
django_mailbox/: __init__.py  admin.py  apps.py  google_utils.py  mail.py  models.py  runtests.py  signals.py  transports.py  utils.py
django_mailbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_mailbox/migrations/: 0001_initial.py  0002_add_eml_to_message.py  0002_auto__chg_field_mailbox_uri.py  0003_auto_20150409_0316.py  0004_bytestring_to_unicode.py  0005_auto_20160523_2240.py  0005_rename_fields.py  0006_auto__add_field_message_in_reply_to.py  0006_mailbox_last_polling.py  0007_auto_20171105_1015.py  0007_auto_20180421_0026.py  0007_auto__del_field_message_address__add_field_message_from_header__add_fi.py  0008_auto_20190219_1553.py  0009_alter_message_eml.py  0009_auto_20200208_0953.py  0009_auto_20210207_0221.py  0009_auto_20210719_1121.py  0009_message_timestamp.py  0010_auto__add_field_mailbox_from_email.py  0013_auto__add_field_messageattachment_message.py  0014_migrate_message_attachments.py  0015_rebuild_message_associations.py  0016_auto__add_field_message_encoded.py  (+1 more)
django_mailbox2/: __init__.py  admin.py  apps.py  models.py  signals.py  utils.py
docs/: Makefile  conf.py  index.rst
scripts/: router  transport
(+138 files in other folders)
