[tool.poetry]
name = "django-mailbox2"
version = "0.1.0"
description = "I'm forking and making it my own."
authors = ["Joe <joe@sunset-crew.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.1.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-django = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
